personalized the title and body, added header

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
   <head>
-    <title>I am a title!</title>
+    <title>Upgrading Brane</title>
   </head>
   
+  <h1>What's the motto?</h1>
+  
   <body>
-    Hello there, awesome person! 
+    Everything's a game until it's not
   </body>
 
 </html>
