--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>Upgrading Brane</title>
-  </head>
+<img src="https://avatars2.githubusercontent.com/u/31319544?v=4">
+
   
   <h1>What's the motto?</h1>
   
