added links to books

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     
     A list of books I've read this year.
     <ul>
-      <li> Principles by Ray Dalio </li>
-      <li> Money for the Rest of Us by J. David Stein </li>
-      <li> Outliers by Malcolm Gladwell [in progress] </li>
+      <li> <a href='principes.com'> Principles</a> by Ray Dalio </li>
+      <li> <a href='moneyfortherestofus.com'> Money for the Rest of Us</a> by J. David Stein </li>
+      <li> <a href='https://mnemeth101.github.io/intro-html/'> Outliers</a> by Malcolm Gladwell [in progress] </li>
     </ul>
   </body>
   
