--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     
     A list of books I've read this year.
     <ul>
-      <li> <a href='principes.com'> Principles</a> by Ray Dalio </li>
-      <li> <a href='moneyfortherestofus.com'> Money for the Rest of Us</a> by J. David Stein </li>
+      <li> <a href='https://www.principles.com'> Principles</a> by Ray Dalio </li>
+      <li> <a href='https://www.moneyfortherestofus.com'> Money for the Rest of Us</a> by J. David Stein </li>
       <li> <a href='https://mnemeth101.github.io/intro-html/'> Outliers</a> by Malcolm Gladwell [in progress] </li>
     </ul>
   </body>
